--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <body>
     <h1>My Activity Tracker</h1>
 
-    <article class="trackAction">
+    <article class="section">
         <h2>Track Action</h2>
     </article>
 
-    <article class="logAction">
+    <article class="section">
         <h2>Log Action</h2>
+        <p class="actionList"></p>
     </article>
-    
-    <article class="statistics">
+
+    <article class="section">
         <h2>Statistics</h2>
     </article>
 
