--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <article class="section">
         <h2>Log Action</h2>
+        <h3>Action History:</h3>
         <p class="actionList"></p>
     </article>
 
