--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 
     <article class="section">
         <h2>Log Action</h2>
+        <form name="log-action">
+            <label for="actionSelection">Action:</label>
+            <select name="action" id="actionSelection"></select>
+
+        </form>
         <h3>Action History:</h3>
-        <p class="actionList"></p>
+        <p class="actionHistory"></p>
     </article>
 
     <article class="section">
