--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <article class="section">
         <h2>Log Action</h2>
 
-        <form class="addActionForm" name="log-action">
+        <form class="addActionForm" id="addActionForm" name="log-action">
 
             <div class="form-input">
                 <label for="actionSelection">Action:</label>
