--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 
     <article class="section">
         <h2>Statistics</h2>
+
+        <article class="statistics">
+            <div class="statistics__stat">Most performed action</div>
+            <div class="statistics__stat">Longest session duration</div>
+            <div class="statistics__stat">Avarage action duration</div>
+            <div class="statistics__stat">You might want to try</div>
+        </article>
     </article>
 
     <script type="module" src="dist/app.js"></script>
