activate most preformed action statistic

--- a/index.html
+++ b/index.html
@@ -47,10 +47,18 @@
         <h2>Statistics</h2>
 
         <article class="statistics">
-            <div class="statistics__stat">Most performed action</div>
-            <div class="statistics__stat">Longest session duration</div>
-            <div class="statistics__stat">Avarage action duration</div>
-            <div class="statistics__stat">You might want to try</div>
+            <div class="statistics__stat">Most performed action
+                <p id="mostPerformed"></p>
+            </div>
+            <div class="statistics__stat">Longest session duration
+                <p id="longestSession"></p>
+            </div>
+            <div class="statistics__stat">Avarage action duration
+                <p id="avarageDuration"></p>
+            </div>
+            <div class="statistics__stat">You might want to try
+                <p id="unperformedAction"></p>
+            </div>
         </article>
     </article>
 
